# FudanWebTool

./: .env.example  .gitignore  LICENSE  README-zh.md  README.md  environment.yml  fudan-web-tool-tray.spec  pyproject.toml
scripts/: build-windows.ps1
src/fudan_web_tool/: __init__.py  __main__.py  autostart.py  cli.py  config.py  connectivity.py  monitor.py  portal.py  recovery.py  settings.py  traffic.py  tray_app.py  tray_main.py
tests/: test_autostart.py  test_cli.py  test_config.py  test_connectivity.py  test_monitor.py  test_package.py  test_portal.py  test_project_metadata.py  test_recovery.py  test_settings.py  test_traffic.py  test_tray_app.py
