[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fudan-web-tool"
version = "0.1.0"
description = "Campus network monitoring and re-authentication helper."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "keyring>=25.0",
    "platformdirs>=4.0",
    "psutil>=5.9",
    "python-dotenv>=1.0",
    "PySide6>=6.7",
]

[project.scripts]
fudan-web-tool = "fudan_web_tool.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
build = [
    "pyinstaller>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fudan_web_tool = ["assets/tray_icon.png"]
